--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,13 +25,50 @@ jobs:
           path: ./
 
       - name: Remove redundant libs
-        run: ls
+        run: |
+          rm -rf dist/windows/Soundy/Include
+          rm -rf dist/windows/Soundy/_asyncio.pyd
+          rm -rf dist/windows/Soundy/_elementtree.pyd
+          rm -rf dist/windows/Soundy/_hashlib.pyd
+          rm -rf dist/windows/Soundy/_queue.pyd
+          rm -rf dist/windows/Soundy/_ssl.pyd
+          rm -rf dist/windows/Soundy/_win32sysloader.pyd
+          rm -rf dist/windows/Soundy/api-ms-win-*
+          rm -rf dist/windows/Soundy/d3dcompiler_47.dll
+          rm -rf dist/windows/Soundy/libcrypto-1_1.dll
+          rm -rf dist/windows/Soundy/libEGL.dll
+          rm -rf dist/windows/Soundy/libGLESv2.dll
+          rm -rf dist/windows/Soundy/libssl-1_1.dll
+          rm -rf dist/windows/Soundy/MSVCP140.dll
+          rm -rf dist/windows/Soundy/MSVCP140_1.dll
+          rm -rf dist/windows/Soundy/opengl32sw.dll
+          rm -rf dist/windows/Soundy/pyexpat.pyd
+          rm -rf dist/windows/Soundy/Qt5DBus.dll
+          rm -rf dist/windows/Soundy/Qt5Network.dll
+          rm -rf dist/windows/Soundy/Qt5Qml.dll
+          rm -rf dist/windows/Soundy/Qt5QmlModels.dll
+          rm -rf dist/windows/Soundy/Qt5Quick.dll
+          rm -rf dist/windows/Soundy/Qt5Svg.dll
+          rm -rf dist/windows/Soundy/Qt5WebSockets.dll
+          rm -rf dist/windows/Soundy/ucrtbase.dll
+          rm -rf dist/windows/Soundy/unicodedata.pyd
+          rm -rf dist/windows/Soundy/VCRUNTIME140.dll
 
       - name: Move libs to lib dir
-        run: ls
-
-      - name: Move python files to dist folder
-        run: ls
+        run: |
+          mkdir dist/windows/Soundy/lib
+          mv dist/windows/Soundy/_ctypes.pyd dist/windows/Soundy/lib
+          mv dist/windows/Soundy/_overlapped.pyd dist/windows/Soundy/lib
+          mv dist/windows/Soundy/_socket.pyd dist/windows/Soundy/lib
+          mv dist/windows/Soundy/libffi-7.dll dist/windows/Soundy/lib
+          mv dist/windows/Soundy/python3.dll dist/windows/Soundy/lib
+          mv dist/windows/Soundy/pywintypes38.dll dist/windows/Soundy/lib
+          mv dist/windows/Soundy/Qt5Core.dll dist/windows/Soundy/lib
+          mv dist/windows/Soundy/Qt5Gui.dll dist/windows/Soundy/lib
+          mv dist/windows/Soundy/Qt5Widgets.dll dist/windows/Soundy/lib
+          mv dist/windows/Soundy/select.pyd dist/windows/Soundy/lib
+          mv dist/windows/Soundy/win32api.pyd dist/windows/Soundy/lib
+          mv dist/windows/Soundy/win32event.pyd dist/windows/Soundy/lib
 
       - name: Purge old artifacts
         uses: kolpav/purge-artifacts-action@v1
